--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         <h1>
             🔥 Projet troll
         </h1>
+    <figure>
+<img src="asset/grand troll.png" alt="troll figurine">
+        <figcaption>
+    <h2>The Troll</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </p>
+        </figcaption>
+    </figure>
     </header>
+    <footer>
+<p>
+&copy; - MIT - 2024
+</p>
+    </footer>
 </body>
 </html>
